--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Parking</string>
     <string name="action_settings">Settings</string>
+    <string name="parking_area_title">Parking Area title</string>
 </resources>
