--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Parking</string>
+    <string name="app_name">Commute Parking</string>
     <string name="action_settings">Settings</string>
-    <string name="parking_area_title">Parking Area title</string>
-	<string name="parking_empty_view">Loading image view</string>
-	<string name="dialog_background_image">Dialog background</string>
-	<string name="parking_area_parking_spaces">Parking spaces: %1$d </string>
+    <string name="parking_area_title" translatable="false">Parking Area title</string>
+	<string name="parking_empty_view" translatable="false">Loading image view</string>
+	<string name="dialog_background_image" translatable="false">Dialog background</string>
+	<string name="parking_area_parking_spaces">Parking spaces: %1$d</string>
 	<string name="parking_area_free_parking_spaces">Free parking spaces: %1$d </string>
 
 </resources>
